# kamaclaude-copy

./: LICENSE  README.md
kama claude/: GITHUB_GUIDE.md  QUICKSTART.md  README.md  kamaclaude_tui.py  pyproject.toml  simple_cli.py  simple_tui.py  test_command.py  test_core.py  test_simple.py  下一步操作.md  启动说明.md  打包上传指南.md  最终上传指南.md  立即推送.md  验证.py
kama claude/kamaclaude/: cli.py  main.py
kama claude/kamaclaude/core/: agent.py  daemon.py  eventbus.py  ipc.py  llm.py  session.py  tools.py  types.py
kama claude/kamaclaude/tui/: app.py
