[project]
name = "kamaclaude"
version = "0.1.0"
description = "KamaClaude - 本地 AI Agent 运行时"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "typer>=0.12.0",
    "anyio>=4.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
kama = "kamaclaude.cli:app"
kamaclaude = "kamaclaude.main:main"
kama-core = "kamaclaude.core.daemon:main"
kama-tui = "kamaclaude.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
